One more description fix

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <br><br>
      In this visual, I use <a href = 'https://www.inaturalist.org/' target = "_blank"> iNaturalist</a> sighting data to animate their remarkable migration.
      <br><br>
+     Each point on the map represents a Monarch sighting.
+     <br><br>
      Inspired by:
       <li> <a target = "_blank" href = "https://ebird.org/science/status-and-trends/canvas/abundance-map-weekly">eBird abundance animations</a></li>
       <li> Mike Bostock's <a target = "_blank" href = "https://bl.ocks.org/mbostock/6452972"> drag slider</a></li>
