--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
      Each point on the map represents a Monarch sighting.
      <br><br>
      Inspired by:
+      <li> <a target = "_blank" href = "https://sites.tufts.edu/pollinators/">Tufts Pollinator Initiative</a></li>
       <li> <a target = "_blank" href = "https://ebird.org/science/status-and-trends/canvas/abundance-map-weekly">eBird abundance animations</a></li>
       <li> Mike Bostock's <a target = "_blank" href = "https://bl.ocks.org/mbostock/6452972"> drag slider</a></li>
       <li> Micah Stubbs' <a target = "_blank" href = "http://bl.ocks.org/micahstubbs/8e15870eb432a21f0bc4d3d527b2d14f"> world mapping series</a></li>
